--- a/src/index.html
+++ b/src/index.html
@@ -843,18 +843,19 @@
       </div>
       <!-- Kehadiran -->
 
-      <div class="w-full h-[750px] flex flex-col justify-center items-center bg-cover bg-center bg-local relative"
+      <div class="w-full h-[750px] flex flex-col justify-center items-center bg-cover bg-center bg-local relative "
         style="background-image: url('img/illustration.jpg');">
-        <div class="flex flex-col justify-center items-center p-2 bg-white shadow-md">
+        <div class="absolute bg-black opacity-50 inset-0 w-full h-full z-0"></div>
+        <div class="flex flex-col justify-center items-center p-2 bg-white shadow-md z-10">
           <div class="aspect-[5/7] w-44 h-auto">
             <img src="img/wedding-potret.jpg" alt="" class="object-cover w-full h-full">
           </div>
         </div>
-        <div class="w-full mx-auto mt-5">
+        <div class="w-full mx-auto mt-5 z-10">
           <h1 class="text-white text-center text-3xl font-bold">Justin & Sisca
           </h1>
         </div>
-        <div class="w-full mx-auto mt-5">
+        <div class="w-full mx-auto mt-5 z-10">
           <p class="text-white text-center text-lg font-semibold">Terima Kasih</p>
         </div>
         <div class="absolute w-full bottom-0 h-48 bg-gradient-to-t from-black to-transparent"></div>
