--- a/src/index.html
+++ b/src/index.html
@@ -861,11 +861,46 @@
         <div class="absolute w-full bottom-0 h-48 bg-gradient-to-t from-black to-transparent"></div>
       </div>
       <div class="w-full h-[500px] bg-black"></div>
-
-
     </div>
+
+    <nav class="fixed bottom-2 z-50 w-full md:w-1/3 mx-auto flex justify-center inset-x-0">
+      <div class="p-2 w-0 flex justify-center mx-6 space-x-6 items-center rounded-full bg-white shadow-lg">
+        <!-- Icon 1 -->
+        <a href="#" class="flex items-center text-gray-600 hover:text-sky-600 transition duration-200">
+          <i class="fa-solid fa-house text-2xl"></i>
+        </a>
+        <!-- Icon 2 -->
+        <a href="#" class="flex items-center text-gray-600 hover:text-sky-600 transition duration-200">
+          <i class="fa-solid fa-user-group text-2xl"></i>
+        </a>
+        <!-- Icon 3 -->
+        <a href="#" class="flex items-center text-gray-600 hover:text-sky-600 transition duration-200">
+          <i class="fa-solid fa-images text-2xl"></i>
+        </a>
+        <!-- Icon 4 -->
+        <a href="#" class="flex items-center text-gray-600 hover:text-sky-600 transition duration-200">
+          <i class="fa-solid fa-map-location-dot text-2xl"></i>
+        </a>
+        <!-- Icon 5 -->
+        <a href="#" class="flex items-center text-gray-600 hover:text-sky-600 transition duration-200">
+          <i class="fa-solid fa-qrcode text-2xl"></i>
+        </a>
+        <!-- Icon 6 -->
+        <a href="#" class="flex items-center text-gray-600 hover:text-sky-600 transition duration-200">
+          <i class="fa-solid fa-circle-down text-2xl"></i>
+        </a>
+        <!-- Icon 7 -->
+        <a href="#" class="flex items-center text-gray-600 hover:text-sky-600 transition duration-200">
+          <i class="fa-solid fa-music text-2xl"></i>
+        </a>
+      </div>
+    </nav>
+    
   </section>
   <!-- Content -->
+
+  
+  
 
 
 </body>
