--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body class="bg-gray-200 text-slate-900">
+<body class="bg-neutral-300 text-slate-900">
 
   <!-- Jumbotron -->
   <section class="relative z-10 flex justify-center mx-auto">
@@ -107,7 +107,7 @@
             <a href="" class="absolute top-4 left-6 text-white hover:text-blue-500">
               <i class="fab fa-instagram text-2xl"></i>
             </a>
-            <div class="absolute bottom-4 left-4 text-white text-lg font-bold px-2 py-1 " data-aos="zoom-out"
+            <div class="absolute bottom-4 left-4 text-white text-lg font-bold px-2 py-1 " data-aos="fade-up"
               data-aos-duration="3000">
               Justin
             </div>
@@ -176,7 +176,7 @@
                   </p>
                 </div>
                 <div class="mt-4">
-                  <button class="bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-4 rounded"
+                  <button class="bg-white hover:bg-gray-600 text-slate-800  hover:text-white font-semibold py-2 px-4 rounded-lg"
                     data-aos="fade-up" data-aos-duration="3000">
                     Save To Calendar
                   </button>
