--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 
   <!-- Jumbotron -->
   <section class="relative z-10 flex justify-center mx-auto">
-    <div class="container px-0 fixed mx-auto w-full md:w-1/3 h-screen justify-center items-center">
+    <div class="container px-0 fixed mx-auto w-full md:w-2/4 lg:w-1/3 h-screen justify-center items-center">
       <!-- Background Image -->
       <!-- Swiper -->
       <div class="absolute inset-0 swiper mySwiper h-full w-full">
@@ -76,7 +76,7 @@
   <div class="container relative px-0 mx-auto w-full min-h-screen invisible z-0" id="home"></div>
 
   <!-- Content -->
-  <section class="z-10 relative w-full md:w-1/3 flex flex-col justify-center  mx-auto ">
+  <section class="z-10 relative w-full md:w-2/4 lg:w-1/3 flex flex-col justify-center  mx-auto ">
     <!--  -->
 
     <!--  -->
@@ -939,9 +939,9 @@
   </section>
   <!-- Content -->
 
-  <nav class="fixed bottom-2 z-30 w-full md:w-1/3 mx-auto h-40px flex justify-center inset-x-0">
+  <nav class="fixed bottom-2 mb-3 z-30 w-full md:w-2/4 lg:w-1/3 mx-auto max-h-[40px] flex justify-center inset-x-0">
     <div
-      class="p-2 w-full max-h-40px  flex justify-center mx-6 space-x-6 items-center rounded-full bg-white shadow-2xl ring-1 ring-black backdrop-blur-lg">
+      class="py-2 px-4 w-full h-full flex justify-evenly mx-6 space-x-6 items-center rounded-full bg-white shadow-2xl ring-1 ring-black backdrop-blur-lg">
       <!-- Icon 1 -->
       <a href="#home" class="flex items-center text-gray-600 hover:text-sky-600 transition duration-200 scroll-smooth">
         <i class="fa-solid fa-house text-2xl"></i>
@@ -976,6 +976,7 @@
     </div>
   </nav>
 
+  <!-- Youtube -->
   <div class="hidden fixed z-0 bottom-0">
     <iframe id="videoFrame" width="0" height="0" src="https://www.youtube.com/embed/VDbVXpJWA-k?enablejsapi=1"
       frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
