--- a/src/index.html
+++ b/src/index.html
@@ -994,11 +994,11 @@
     <nav
       class="fixed bottom-2 mb-1 md:mb-3 z-30 w-full md:w-2/4 lg:w-1/3 mx-auto max-h-[40px] flex justify-center inset-x-0">
       <div
-        class="py-2 px-4 w-full h-full flex justify-evenly mx-6 space-x-6 items-center rounded-full bg-white shadow-2xl ring-1 ring-black backdrop-blur-lg">
+        class="py-2 px-4 w-full h-full flex justify-evenly mx-6 space-x-6 items-center rounded-full bg-white shadow-2xl ring-1 ring-black backdrop-blur-lg bg-opacity-50">
         <!-- Icon 1 -->
         <a href="#home"
-          class="flex items-center text-gray-600 hover:text-sky-600 transition duration-200 scroll-smooth">
-          <i class="fa-solid fa-house text-lg md:text-2xl"></i>
+          class="flex items-center text-gray-600 hover:text-sky-600 transition duration-200 scroll-smooth text-opacity-100">
+          <i class="fa-solid fa-house text-lg md:text-2xl "></i>
         </a>
         <!-- Icon 2 -->
         <a href="#absen" class="flex items-center text-gray-600 hover:text-sky-600 transition duration-200">
