--- a/src/index.html
+++ b/src/index.html
@@ -102,7 +102,8 @@
 
           <!-- Bottom Title -->
           <div class="">
-            <h1 class="text-white text-3xl font-bold text-center font-italiana" data-aos="zoom-in-up" data-aos-duration="3000">Justin
+            <h1 class="text-white text-3xl font-bold text-center font-italiana" data-aos="zoom-in-up"
+              data-aos-duration="3000">Justin
               dan Siska</h1>
           </div>
         </div>
@@ -589,35 +590,47 @@
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 
-            <div class=" w-full flex  flex-row gap-2 px-3 items-center mt-3" data-aos="fade-up"
-              data-aos-duration="3000">
+            <div class="w-full flex flex-row gap-2 px-3 items-center mt-3" data-aos="fade-up" data-aos-duration="3000">
               <div class="basis-1/2 w-full h-[255px]">
-                <img src="img/wedding-potret.jpg" class="object-cover object-center w-full h-full shadow-md" alt="" />
+                <img src="img/wedding-potret.jpg"
+                  class="object-cover object-center w-full h-full shadow-md cursor-pointer" alt="Wedding Potret"
+                  onclick="openModalImg(this)" />
               </div>
               <div class="basis-3/4 w-full h-[255px]">
-                <img src="img/prewed-square.jpg" class="object-cover object-center w-full h-full shadow-md" alt="" />
+                <img src="img/prewed-square.jpg"
+                  class="object-cover object-center w-full h-full shadow-md cursor-pointer " alt="Prewed Square"
+                  onclick="openModalImg(this)" />
               </div>
             </div>
 
-            <div class=" w-full flex  flex-row gap-2 px-3 items-center mt-3" data-aos="fade-up"
-              data-aos-duration="3000">
+            <div class="w-full flex flex-row gap-2 px-3 items-center mt-3" data-aos="fade-up" data-aos-duration="3000">
               <div class="basis-1/2 w-full h-[255px]">
-                <img src="img/wedding-potret.jpg" class="object-cover object-center w-full h-full shadow-md" alt="" />
+                <img src="img/wedding-potret.jpg"
+                  class="object-cover object-center w-full h-full shadow-md cursor-pointer" alt="Wedding Potret"
+                  onclick="openModalImg(this)" />
               </div>
               <div class="basis-3/4 w-full h-[255px]">
-                <img src="img/prewed-square.jpg" class="object-cover object-center w-full h-full shadow-md" alt="" />
+                <img src="img/prewed-square.jpg"
+                  class="object-cover object-center w-full h-full shadow-md cursor-pointer" alt="Prewed Square"
+                  onclick="openModalImg(this)" />
               </div>
             </div>
 
-            <div class="w-full flex  flex-row gap-2 px-3 items-center mt-3" data-aos="fade-up" data-aos-duration="3000">
+            <div class="w-full flex flex-row gap-2 px-3 items-center mt-3" data-aos="fade-up" data-aos-duration="3000">
               <div class="basis-6/12 w-full h-[158px]">
-                <img src="img/prewed-square.jpg" class="object-cover object-center w-full h-full shadow-md" alt="" />
+                <img src="img/prewed-square.jpg"
+                  class="object-cover object-center w-full h-full shadow-md cursor-pointer" alt="Prewed Square"
+                  onclick="openModalImg(this)" />
               </div>
               <div class="basis-5/12 w-full h-[158px]">
-                <img src="img/wedding-potret.jpg" class="object-cover object-center w-full h-full shadow-md" alt="" />
+                <img src="img/wedding-potret.jpg"
+                  class="object-cover object-center w-full h-full shadow-md cursor-pointer" alt="Wedding Potret"
+                  onclick="openModalImg(this)" />
               </div>
               <div class="basis-6/12 w-full h-[158px]">
-                <img src="img/prewed-square.jpg" class="object-cover object-center w-full h-full shadow-md" alt="" />
+                <img src="img/prewed-square.jpg"
+                  class="object-cover object-center w-full h-full shadow-md cursor-pointer" alt="Prewed Square"
+                  onclick="openModalImg(this)" />
               </div>
             </div>
 
@@ -1013,7 +1026,7 @@
           <i class="fa-solid fa-map-location-dot text-lg md:text-2xl"></i>
         </a>
         <!-- Icon 5 -->
-        <button type="button" id="openModal"
+        <button type="button" id="openModalQr"
           class="flex items-center text-gray-600 hover:text-sky-600 transition duration-200">
           <i class="fa-solid fa-qrcode text-lg md:text-2xl"></i>
         </button>
@@ -1038,32 +1051,45 @@
       </iframe>
     </div>
 
-    <!-- Modal -->
-    <div id="modal" class="fixed invisible inset-0 bg-black bg-opacity-50 flex  justify-center items-center z-50">
-      <div class="bg-white rounded-lg w-80 p-6 shadow-lg relative">
-
-        <h2 class="text-lg font-bold text-center mb-4">QRCode Buku Tamu</h2>
-        <p class="text-center text-sm mb-4">The Wedding of Justins & Sisca</p>
-        <p class="text-center text-sm mb-6">Tunjukkan QRCode di bawah ini ke panitia penyelenggara</p>
-        <div class="flex justify-center mb-6">
-
-          <img src="img/qr-1.jpg" alt="QR Code" class="w-40 h-40">
-        </div>
-        <div class="flex justify-center mb-4">
-          <button id="downloadBtn" class="px-4 py-2 bg-green-500 text-white rounded-lg hover:bg-green-600">
-            Download
-          </button>
-        </div>
-        <div class="flex justify-center">
-          <button id="closeModal" class="px-4 py-2 bg-gray-400 text-white rounded-lg hover:bg-gray-500">
-            Close
-          </button>
-        </div>
-      </div>
-    </div>
+    
   </div>
   <!-- content -->
+<!-- Modal Qr -->
+<div id="modal" class="fixed invisible inset-0 bg-black bg-opacity-50 flex  justify-center items-center z-50">
+  <div class="bg-white rounded-lg w-80 p-6 shadow-lg relative">
 
+    <h2 class="text-lg font-bold text-center mb-4">QRCode Buku Tamu</h2>
+    <p class="text-center text-sm mb-4">The Wedding of Justins & Sisca</p>
+    <p class="text-center text-sm mb-6">Tunjukkan QRCode di bawah ini ke panitia penyelenggara</p>
+    <div class="flex justify-center mb-6">
+
+      <img src="img/qr-1.jpg" alt="QR Code" class="w-40 h-40">
+    </div>
+    <div class="flex justify-center mb-4">
+      <button id="downloadBtn" class="px-4 py-2 bg-green-500 text-white rounded-lg hover:bg-green-600">
+        Download
+      </button>
+    </div>
+    <div class="flex justify-center">
+      <button id="closeModal" class="px-4 py-2 bg-gray-400 text-white rounded-lg hover:bg-gray-500">
+        Close
+      </button>
+    </div>
+  </div>
+</div>
+
+
+ <!-- Modal Image -->
+ <div id="imageModal"
+ class="fixed invisible inset-0 z-50  bg-black bg-opacity-75 flex items-center justify-center transition-all duration-300 ease-in-out">
+ <div class="relative">
+   <img id="modalImage" class="max-w-full max-h-screen rounded-lg shadow-xl py-11" src="" alt="Modal Image" />
+   <button onclick=" closeModalImg()"
+     class="absolute top-2 right-2 text-white bg-sky-500 hover:bg-slate-600 rounded-lg py-1 px-3 focus:outline-none">
+     ✕
+   </button>
+ </div>
+</div>
   <!-- datePick -->
   <script src="js/setDate.js"></script>
 
@@ -1079,6 +1105,7 @@
   <script src="js/autoScroll.js"></script>
   <script src="js/openCover.js"></script>
   <script src="js/modal.js"></script>
+  <script src="js/modalImage.js"></script>
 </body>
 
 </html>
